--- a/css/style.css
+++ b/css/style.css
@@ -59,10 +59,12 @@ footer{
 nav a{
   color: black;
   font-weight: bold;
-  /* Requirement 1 code here*/
+  text-decoration: none;
 }
 
-  /* Requirement 2 code here*/
+nav a:hover {
+  text-decoration: underline;
+}
 
 
 
@@ -75,19 +77,27 @@ nav a{
   z-index: 1;
 
   /* Requirement 3a code here*/
+  position: absolute;
+  top: -40px;
   
 }
 
 /* Requirement 3b code here*/
+.skip a:focus {
+  position: absolute;
+}
 
-
-/* Requirement 4 code here*/
-
+*:focus {
+  border: 2px solid;
+}
 
 
 .container{
   /* Requirement 5 code here*/
-
+  display: grid;
+  grid-template-columns: 1fr 5fr 1fr;
+  grid-template-rows: auto auto auto auto auto;
+  grid-row-gap: 15px;
 }
 
 /* Remainder of requirements here: */
@@ -100,24 +110,52 @@ header{
   height: 400px; /* Parallax effect */
 
   /* YOUR CODE HERE; */
+  grid-column: 1 / -1;
+  grid-row: 1 / 2;
+  background-image: url('../images/header.jpg');
+  background-repeat: no-repeat;
 }
 
-
-
-.about-image{
-  
+.about, .method, .clients, .contact {
+  grid-column: 2 / 3;
 }
 
-.about{
- 
+.about {
+  grid-row: 2 / 3;
 }
 
-.method-image{
- 
+.method {
+  grid-row: 3 / 4;
 }
 
-.method{
-  
+.clients {
+  grid-row: 4 / 5;
+}
+
+.contact {
+  grid-row: 5 / 6;
+}
+
+.about-image, .method-image, .clients-image, .contact-image {
+  grid-column: 1 / -1;
+  max-height: 700px;
+  overflow: hidden;
+}
+
+.about-image {
+  grid-row: 2 / 3;
+}
+
+.method-image {
+  grid-row: 3 / 4;
+}
+
+.clients-image {
+  grid-row: 4 / 5;
+}
+
+.contact-image {
+  grid-row: 5 / 6;
 }
 
 /* You need to write some of your own selectors here */
@@ -130,52 +168,29 @@ header{
   padding: 30px;
 
   /* Your code here */
-
+  align-self: center;
 }
 
 @media screen and (min-width: 800px){
   nav{
     padding: 30px 0;
 
-    /* Your code here */
+    text-align: right;
+    align-self: center;
   }
 
   .container{
-   
+    display: grid;
+    grid-template-columns: 50px auto 500px auto 50px;
+    grid-template-rows: 400px 400px 400px 400px 400px;
   }
 
-  
-
-  .about-image{
-  
+  .about, .clients, .method-image, .contact-image {
+    grid-column: 3 / 5;
   }
 
-  .about{
-    
-  }
-
-  .method-image{
-    
-  }
-
-  .method{
-   
-  }
-
-  .clients-image{
-    
-  }
-
-  .clients{
-    
-  }
-
-  .contact-image{
-    
-  }
-
-  .contact{
-    
+  .method, .contact, .about-image, .clients-image {
+    grid-column: 2 / 4;
   }
 
 }
